--- a/index.html
+++ b/index.html
@@ -23,5 +23,25 @@
 
     </div>
     
+    <div id="area-principal">
+        <div id="area-postagens">
+            <div class="postagem">
+                <h2>Titulo da Postagem 1</h2>
+                <span class="data-postagem">postado 02 Julho 2020</span>
+                <img width="620px" src="imagens/imagem1.jpg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, eligendi a et unde facere fuga perferendis tenetur id est. Molestias ad quos harum recusandae dicta eaque provident praesentium magnam modi.</p>
+                <a href="#">Leia mais</a>
+            </div>
+        </div>
+
+        <div id="area-lateral">
+            Menu lateral
+        </div>
+
+        <div id="rodape">
+            Todos os direitos reservados
+        </div>
+    </div>
+
 </body>
 </html>
