--- a/index.html
+++ b/index.html
@@ -28,14 +28,35 @@
             <div class="postagem">
                 <h2>Titulo da Postagem 1</h2>
                 <span class="data-postagem">postado 02 Julho 2020</span>
-                <img width="620px" src="imagens/imagem1.jpg" alt="">
+                <img width="620px" src="imagens/imagem1.jpg" alt="Imagem 1">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, eligendi a et unde facere fuga perferendis tenetur id est. Molestias ad quos harum recusandae dicta eaque provident praesentium magnam modi.</p>
+                <a href="#">Leia mais</a>
+            </div>
+
+            <div class="postagem">
+                <h2>Titulo da Postagem 2</h2>
+                <span class="data-postagem">postado 10 Março 2022</span>
+                <img width="620px" src="imagens/imagem2.jpg" alt="Imagem 2">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, eligendi a et unde facere fuga perferendis tenetur id est. Molestias ad quos harum recusandae dicta eaque provident praesentium magnam modi.</p>
                 <a href="#">Leia mais</a>
             </div>
         </div>
 
         <div id="area-lateral">
-            Menu lateral
+            
+            <div class="conteudo-lateral">
+                <h3>Postagens recentes</h3>
+                <div class="postagem-lateral">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro soluta corporis vitae. </p>
+                    <a href="">Leia mais</a>
+                </div>
+
+                <div class="postagem-lateral" style="border-bottom: none;">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro soluta corporis vitae. </p>
+                    <a href="">Leia mais</a>
+                </div>
+            </div>
+
         </div>
 
         <div id="rodape">
